# zero2prod

./: .env  Cargo.toml  README.md  configuration.yaml
.github/workflows/: rust.yml
migrations/: 20210215013445_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
