[package]
name = "zero2prod"
version = "0.1.0"
authors = ["onyewuenyi <onyewuenyi@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
serde = { version = "1", features = ["derive"]}

# Using table-like toml syntax to avoid a super-long line! 
[dependencies.sqlx]
version = "0.4.1"
default-features = false
features = [ 
    "runtime-actix-rustls", 
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
tokio = "0.2.22"
reqwest = "0.10"


