[package]
name = "zero2prod"
version = "0.1.0"
authors = ["onyewuenyi <onyewuenyi@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
serde = { version = "1", features = ["derive"]}
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
sqlx = { version = "0.4.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"

[dev-dependencies]
tokio = "0.2.22"
reqwest = "0.10"


